# openteams

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  INTEGRATION_SUMMARY.md  README.md  README_zh.md  TEST_PLAN_CHAT_PRESETS.md  TODOS.md  TRANSLATION_SUMMARY.md  agentschatgroup_ui_preview.html  local-build.sh  package-lock.json  package.json  plan.md  pnpm-lock.yaml  rustc-ice-2026-02-23T04_56_03-38472.txt  rustc-ice-2026-03-20T08_10_21-98380.txt  rustc-ice-2026-03-20T08_39_07-105688.txt  rustc-ice-2026-06-01T22_32_22-132448.txt  thinking.html
.claude/: settings.local.json
.design/: README_draft.md  README_en.md  README_outline.md  bak_README.md
.sqlx/: query-038b6b7e7248866e9543e9f5d16d2839a63e49eec0b92e9bffb07958a245a3be.json  query-230d091746d22945d88046f5bc749ea26274c5f12431a12243679fe7dc5dd4fb.json  query-3190e5da3f8f01b42d6c4a0574be04c0ce6b12c6e07cb51f3567c31e5b0f7f70.json  query-40db9ad91196dff70cd23eb58513848bfec061bf9f32caab369d45a18c0f79db.json  query-44d6309a9691e09a0ce8f75b765984727d023896e8688682c08d7cecd9b71c19.json  query-4fc490e8e8b6885fd6c7772f1384a6de5d538e22ed393da2a9309fd40f00d14e.json  query-584f740dc3959e79b232e0408b61662ef880b6cd9902889fdb49ef70dd15d04f.json  query-5e1b19dddb6a68708c5270e7ab31be922c3e513923ba0fc36ff5ed08e8cc622b.json  query-92ba35d996dc5ce755c17b4e5f562cfd9241b41d1a5997bd221130611ad3a00c.json  query-98f340b88c1c4c7442d562b0341681eb4fadc294b91197c6bea7fc0911412341.json  query-b17e4e7fe902086cd7a4ec197725d36c6bf718164849b4e1018975e3b4abce3c.json  query-ca00ba9ddcb9274f23476b8a28d35cf6bcc115d86f2c8260d824859271ceaada.json  query-fb2432fed95d01ffd9ef80179935b482f3f9cce0aa7bfc9dd487d00c1a459af2.json
agents-chatgroup-npx/: README.md  package.json
crates/skill-registry-server/: Cargo.toml
crates/skill-registry-server/src/: main.rs
docs/: agent-activity-log-loss-fix-plan.md  docs.json  getting-started.mdx  index.mdx  mintlify-schema.json  openteams-cli-30mb-target.md  openteams-cli-size-analysis.md  openteams-cli-slim-plan.md  style.css  supported-coding-agents.mdx  troubleshooting.mdx  文档大纲.txt
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/debian/: postrm
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  update.rs
src-tauri/wix/fragments/: agents-chatgroup-directory.wxs  openteams-directory.wxs
(+1845 files in other folders)
