[package]
name = "agent-chatgroup-desktop"
version = "0.1.4"
description = "Agent Chatgroup Desktop"
authors = ["BloopAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["updater", "custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"

[features]
# this feature is used for production builds where `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
