[package]
name = "agents-chatgroup-desktop"
version = "0.2.10"
description = "Agents Chatgroup Desktop"
authors = ["StarTerra AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["updater", "custom-protocol", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"
directories = "5"

[features]
# this feature is used for production builds where `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
