[package]
name = "skill-registry-server"
version = "0.1.0"
edition = "2021"
description = "Standalone skill registry server providing skill download services"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }